refactor: for all remaining microservices done
final version for now - will continue debugging later